src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Intent_Trigger__c</fullName>
        <label>Intent Trigger</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AllegroGraph</fullName>
                </value>
                <value>
                    <fullName>Amazon Neptune</fullName>
                </value>
                <value>
                    <fullName>ArangoDB</fullName>
                </value>
                <value>
                    <fullName>Cypher</fullName>
                </value>
                <value>
                    <fullName>Datastax Enterprise</fullName>
                </value>
                <value>
                    <fullName>Dgraph</fullName>
                </value>
                <value>
                    <fullName>Giraph</fullName>
                </value>
                <value>
                    <fullName>Graph Database</fullName>
                </value>
                <value>
                    <fullName>Graph Databases</fullName>
                </value>
                <value>
                    <fullName>Graph Day Texas</fullName>
                </value>
                <value>
                    <fullName>GraphDB</fullName>
                </value>
                <value>
                    <fullName>Graph DB</fullName>
                </value>
                <value>
                    <fullName>GraphQL</fullName>
                </value>
                <value>
                    <fullName>JanusGraph</fullName>
                </value>
                <value>
                    <fullName>Microsoft Azure Cosmos DB</fullName>
                </value>
                <value>
                    <fullName>Microsoft Cosmos DB</fullName>
                </value>
                <value>
                    <fullName>Neo4j</fullName>
                </value>
                <value>
                    <fullName>OrientDB</fullName>
                </value>
                <value>
                    <fullName>Stardog</fullName>
                </value>
                <value>
                    <fullName>TigerGraph</fullName>
                </value>
                <value>
                    <fullName>Virtuoso</fullName>
                </value>
                <value>
                    <fullName>Anti-Money Laundering</fullName>
                </value>
                <value>
                    <fullName>Fraud Rings</fullName>
                </value>
                <value>
                    <fullName>Fraud Detection</fullName>
                </value>
                <value>
                    <fullName>Transactions Fraud</fullName>
                </value>
                <value>
                    <fullName>Bank Fraud</fullName>
                </value>
                <value>
                    <fullName>Aml</fullName>
                </value>
                <value>
                    <fullName>Product Recommendations</fullName>
                </value>
                <value>
                    <fullName>Service Recommendations</fullName>
                </value>
                <value>
                    <fullName>Contant Recommendations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Business Executive</fullName>
                </value>
                <value>
                    <fullName>Data Analyst</fullName>
                </value>
                <value>
                    <fullName>Database Administrator (DBA)</fullName>
                </value>
                <value>
                    <fullName>Delivery Manager</fullName>
                </value>
                <value>
                    <fullName>Development Manager/Tech Lead/Director</fullName>
                </value>
                <value>
                    <fullName>IT Executive (CIO, CTO, VP Engineering..)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Personal Assistant</fullName>
                </value>
                <value>
                    <fullName>Product/Project Management</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>Software Developer/Engineer</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <label>Job Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin/Administrator</fullName>
                </value>
                <value>
                    <fullName>Analyst/Strategist</fullName>
                </value>
                <value>
                    <fullName>Chief (CXO)</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Vice President</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the contact</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__No_longer_at_Company__c</fullName>
        <inlineHelpText>Field automatically updated by LinkedIn Sales Navigator Data Validation. “Not at Company” means Contact is not with associated Account based on LinkedIn profile. No value indicates LinkedIn has no feedback to share.</inlineHelpText>
        <label>Not at Company Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not at Company</fullName>
                </value>
                <value>
                    <fullName>Ignore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Touch_Closed_Won__c</fullName>
        <label>Last Touch - Closed Won</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Touch_Inquiry__c</fullName>
        <label>Last Touch - Inquiry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Touch_Late_Stage__c</fullName>
        <label>Last Touch - Late Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Touch_MQL__c</fullName>
        <label>Last Touch - MQL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Touch_SAL__c</fullName>
        <label>Last Touch - SAL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Touch_SAO__c</fullName>
        <label>Last Touch - SAO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Touch_SQL__c</fullName>
        <label>Last Touch - SQL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Late_Stage_Opportunity_Date__c</fullName>
        <label>Late Stage Opportunity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Grade__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>The grade of a lead to identify leads that are most likely to buy.</description>
        <inlineHelpText>The grade of a lead to identify leads that are most likely to buy.</inlineHelpText>
        <label>Lead Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_ID__c</fullName>
        <externalId>true</externalId>
        <label>Lead ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Type__c</fullName>
        <label>Lead Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__LD_Segment__c</fullName>
        <label>LD Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Matched_Buyer_Persona__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matched Buyer Persona</label>
        <referenceTo>LeanData__Buyer_Persona__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Modified_Score__c</fullName>
        <label>Modified Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Routing_Action__c</fullName>
        <label>Routing Action</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Status_Info__c</fullName>
        <label>State Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Tag__c</fullName>
        <label>Tag</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Database_Count_Aggregate__c</fullName>
        <businessOwnerGroup>Aura_Self_Serve_Growth_Team</businessOwnerGroup>
        <description>Indicates the aggregate number of live databases (Free + Pro) across all AuraDB users who share the same company domain.This information serves to assist the SDR and Sales reps with both their prospecting and their sales approach. Updated daily from Segment/Marketo. JIRA: SFDCSPT-594</description>
        <inlineHelpText>Indicates the aggregate number of live databases (Free + Pro) across all AuraDB users who share the same company domain. This field is updated daily by Marketo that receives its data from Segment managed by the Aura Self-Serve Growth Team.</inlineHelpText>
        <label>Live Database Count (Aggregate)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Live_Database_Count__c</fullName>
        <businessOwnerGroup>Aura_Self_Serve_Growth_Team</businessOwnerGroup>
        <description>Indicates the number of live databases (Free + Pro) that an AuraDB user has had running within the past 24 hours. This information serves to assist the SDR and Sales reps with both their prospecting and their sales approach. Updated daily from Segment/Marketo. JIRA: SFDCSPT-594</description>
        <inlineHelpText>Indicates the number of live databases (Free + Pro) that an AuraDB user has had running within the past 24 hours. This field is updated daily by Marketo that receives its data from Segment managed by the Aura Self-Serve Growth Team.</inlineHelpText>
        <label>Live Database Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Live_GB_Size_Aggregate__c</fullName>
        <businessOwnerGroup>Aura_Self_Serve_Growth_Team</businessOwnerGroup>
        <description>Indicates the aggregate size of live databases (Free + Pro) across all AuraDB users who share the same company domain.This information serves to assist the SDR and Sales reps with both their prospecting and their sales approach. Updated daily from Segment/Marketo. JIRA: SFDCSPT-594</description>
        <inlineHelpText>Indicates the aggregate size of live databases (Free + Pro) across all AuraDB users who share the same company domain. This field is updated daily by Marketo that receives its data from Segment managed by the Aura Self-Serve Growth Team.</inlineHelpText>
        <label>Live GB Size (Aggregate)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Live_GB_Size__c</fullName>
        <businessOwnerGroup>Aura_Self_Serve_Growth_Team</businessOwnerGroup>
        <description>Indicates the aggregate size of all live databases (Free + Pro) that an AuraDB user has had running within the past 24 hours. This information serves to assist the SDR and Sales reps with both their prospecting and their sales approach. Updated daily from Segment/Marketo. JIRA: SFDCSPT-594</description>
        <inlineHelpText>Indicates the aggregate size of all live databases (Free + Pro) that an AuraDB user has had running within the past 24 hours. This field is updated daily by Marketo that receives its data from Segment managed by the Aura Self-Serve Growth Team.</inlineHelpText>
        <label>Live GB Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MQL_Count__c</fullName>
        <label>MQL Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MQL_Date__c</fullName>
        <label>MQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MQL_Original_Date__c</fullName>
        <label>MQL Original Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marketing_Qualified_Date__c</fullName>
        <label>Marketing Qualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marketplace_Order__c</fullName>
        <businessOwnerUser>lance.kaji@neotechnology.com.trnnadia</businessOwnerUser>
        <defaultValue>false</defaultValue>
        <description>SFDCSPT-276</description>
        <inlineHelpText>Check this checkbox if this Contact should receive the Marketplace order.</inlineHelpText>
        <label>Marketplace Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meets_Enterprise_Criteria__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A field that indicates if a contact has met the enterprise criteria set by marketing. This field is updated by marketo</description>
        <label>Meets Enterprise Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meets_Mid_Market_Criteria__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <defaultValue>false</defaultValue>
        <description>A contact who meets the Mid-Market Criteria</description>
        <inlineHelpText>A contact who meets the Mid-Market Criteria</inlineHelpText>
        <label>Meets Mid-Market Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Event_Questions__c</fullName>
        <label>Most Recent Event Questions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name_of_Active_Sequence__c</fullName>
        <description>Name of active outreach sequence</description>
        <label>Name of Active Sequence</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neo4j_Aura__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Neo4j Aura</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Neo4j_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Neo4j Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Longer_With_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Longer With Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oktopost_Social_Last_Source__c</fullName>
        <businessOwnerGroup>Content_Marketing</businessOwnerGroup>
        <description>This field is part of Oktopost &lt;&gt; SFDC integration and is automatically updated by Oktopost. It contains the name of the social media platform where the Contact last interacted with Neo4j&apos;s content. For example, if the Contact likes or comments on a Neo4j post on LinkedIn, the value displayed in the field will be ‘LinkedIn’. JIRA: SFDCSPT-608</description>
        <inlineHelpText>Contains the name of the social media platform where the Contact last interacted with Neo4j&apos;s content. For example, if the Contact likes or comments on a Neo4j post on LinkedIn, the value displayed in the field will be ‘LinkedIn’. The field is automatically populated by Oktopost.</inlineHelpText>
        <label>Social Last Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <externalId>true</externalId>
        <label>Opportunity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opt_In_Date__c</fullName>
        <label>Opt-In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opt_In_Notes__c</fullName>
        <label>Opt-In Notes</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Use_Case__c</fullName>
        <label>Other Use Case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outbound_Campaign__c</fullName>
        <label>Outbound Campaign</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>Matzen Shirley</fullName>
                </value>
                <value>
                    <fullName>Candace Shin</fullName>
                </value>
                <value>
                    <fullName>Hessan Haiderzada</fullName>
                </value>
                <value>
                    <fullName>Julio Bayona</fullName>
                </value>
                <value>
                    <fullName>Sherman Urrutia</fullName>
                </value>
                <value>
                    <fullName>Vanessa Moultson</fullName>
                </value>
                <value>
                    <fullName>Keoni Gaspar</fullName>
                </value>
                <value>
                    <fullName>Art Thainuruk</fullName>
                </value>
                <value>
                    <fullName>Sam Magnus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outeach_Status__c</fullName>
        <businessOwnerUser>stephen.depaoli@neo4j.com.trnnadia</businessOwnerUser>
        <description>Temporary field to store outreach status until outreach status values match SFDC</description>
        <label>Outreach Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PQL_Status__c</fullName>
        <businessOwnerGroup>Aura_Self_Serve_Growth_Team</businessOwnerGroup>
        <defaultValue>false</defaultValue>
        <description>Indicates whether an AuraDB user&apos;s in-product behavior and demographic data qualify it for a sales conversation. Updated daily from Segment/Marketo. JIRA: SFDCSPT-594</description>
        <inlineHelpText>Indicates whether an AuraDB user&apos;s in-product behavior and demographic data qualify it for a sales conversation. This field is updated daily by Marketo that receives its data from Segment managed by the Aura Self-Serve Growth Team.</inlineHelpText>
        <label>PQL Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Marketing_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>a7y3s0000004HyrAAE discussed with Rod,Logan,Julia</description>
        <inlineHelpText>Primary marketing contact dedicated to Neo4j</inlineHelpText>
        <label>Partner Marketing Contact (manual)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Role__c</fullName>
        <label>Partner Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PassedProfanityCheck__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <defaultValue>false</defaultValue>
        <description>This field is used by Data Stewards to tag Contact records that have been determined upon review not to contain offensive language. These records typically appear in RingLead results because some part of the name or email address may be flagged by the tool (e.g. last name Cuntz). JIRA: SFDCSPT-817</description>
        <inlineHelpText>This field is used by Data Stewards to tag Contact records that have been determined upon review not to contain offensive language. These records typically appear in RingLead results because some part of the name or email address may be flagged by the tool (e.g. last name Cuntz).</inlineHelpText>
        <label>Passed Profanity Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pause_Lifecycle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pause Lifecycle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Persona__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>C Suite, Central IT, or Practitioner</description>
        <inlineHelpText>C Suite, Central IT, or Practitioner</inlineHelpText>
        <label>Persona</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C Suite</fullName>
                </value>
                <value>
                    <fullName>Central IT</fullName>
                </value>
                <value>
                    <fullName>Practitioner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pro_Tier_User_Status__c</fullName>
        <businessOwnerGroup>Aura_Self_Serve_Growth_Team</businessOwnerGroup>
        <defaultValue>false</defaultValue>
        <description>Indicates whether an Aura user has had at least one live Pro AuraDB database running within the past 24 hours. This information serves to assist the SDR and Sales reps with both their prospecting and their sales approach. Updated daily from Segment/Marketo. JIRA: SFDCSPT-594</description>
        <inlineHelpText>Indicates whether an Aura user has had at least one live Pro AuraDB database running within the past 24 hours. This field is updated daily by Marketo that receives its data from Segment managed by the Aura Self-Serve Growth Team.</inlineHelpText>
        <label>Pro Tier User Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RCM_Stage__c</fullName>
        <label>RCM Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raw_Original_Date__c</fullName>
        <label>Raw Original Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recycle_Date__c</fullName>
        <label>Recycle Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recycle_Reason_History__c</fullName>
        <label>Recycle Reason History</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RegionalTerritoryContact__c</fullName>
        <description>Indicates what regional territory the Contact falls into based on the shipping country and/or state. JIRA: SFDCSPT-306</description>
        <inlineHelpText>Indicates what regional territory the Contact falls into based on the shipping country and/or state. Auto-populated.</inlineHelpText>
        <label>Regional Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Consider_Updates_After__c</fullName>
        <label>Consider Updates After</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Current_Endpoint__c</fullName>
        <label>Current Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__RingLead_App_Field__c</fullName>
        <label>RingLead App Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__RingLead_Last_Processed_Date__c</fullName>
        <label>Last Processed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__RingLead_Processed_Count__c</fullName>
        <label>Processed Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Trigger_Type_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Type Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Trigger_Type_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Type Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RingLead_DMS_Status__c</fullName>
        <description>Indicates when the RingLead DMS webhook has finished processing a new Marketo record and it can be synced to SFDC. Values can include &apos;true&apos;, &apos;link_to_account&apos;, &apos;convert_to_contact&apos;, and &apos;Orphan:[SFDC record ID]&apos;.  Also, if an existing SFDC record is not synced to Marketo and it is a duplicate of a new Marketo record, the value will be set to &apos;SF_Orphan:[Marketo record ID].</description>
        <inlineHelpText>Indicates when the RingLead DMS webhook has finished processing a new Marketo record and it can be synced to SFDC.</inlineHelpText>
        <label>RingLead DMS Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RingLead_Overwritten_Field_Values__c</fullName>
        <description>This field stores the field values from the losing record in a merge. It is auto-populated by RingLead.</description>
        <inlineHelpText>This field stores the field values from the losing record in a merge. It is auto-populated by RingLead.</inlineHelpText>
        <label>RingLead Overwritten Field Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Role_In_Purchasing__c</fullName>
        <label>Role In Purchasing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Determine Need</fullName>
                </value>
                <value>
                    <fullName>Evaluate Products/Services</fullName>
                </value>
                <value>
                    <fullName>Financial Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Implement Products/Services</fullName>
                </value>
                <value>
                    <fullName>Recommend and Specify Products/Services</fullName>
                </value>
                <value>
                    <fullName>Technical Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Primary Account Contact</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable Contact</fullName>
                </value>
                <value>
                    <fullName>No Longer With Company</fullName>
                </value>
                <value>
                    <fullName>Purchasing Team</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Champion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAL_Date__c</fullName>
        <label>SAL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAL_Original_Date__c</fullName>
        <label>SAL Original Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAO_Date__c</fullName>
        <label>SAO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_Contact_ID__c</fullName>
        <formula>casesafeid(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SQL_Date__c</fullName>
        <label>SQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SQL_Original_Date__c</fullName>
        <label>SQL Original Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Target_Account_Status__c</fullName>
        <formula>TEXT (Account.Sales_Target_Account_Status__c )</formula>
        <label>Sales Target Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Single_Opt_In_Date__c</fullName>
        <label>Single Opt-In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Single_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Single Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Soft_Opt_In_Date__c</fullName>
        <label>Soft Opt-In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Soft_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Soft Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_Partner_Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>a7y3s0000004HyrAAE discussed with Rod,Logan,Julia</description>
        <inlineHelpText>Indicates subscription to partner communications such as newsletter, webinar</inlineHelpText>
        <label>Subscription:Partner Newsletter (manual)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Support_Contact_Text__c</fullName>
        <label>Support Contact Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support Contact</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>